--- a/src/components/ItemListContainer/itemlistcontainer.css
+++ b/src/components/ItemListContainer/itemlistcontainer.css
@@ -12,7 +12,11 @@
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 10px;
+  margin-top: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
+
 }
 
 .itemlistcontainer .productos .producto {
@@ -21,4 +25,27 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+  border: 3px solid black;
+  gap: 10px;
+}
+
+.linkVerMas{
+  font-size: 20px;
+  color: blue;
+  text-decoration: underline;
+  font-weight: 800;
+}
+
+.proNombre{
+  text-transform: uppercase;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 700;
+  font-size: larger;
+}
+
+.proPrecio{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 700;
+  font-size: larger;
+  color: rgb(154, 154, 214);
 }
