--- a/src/components/ItemListContainer/itemlistcontainer.css
+++ b/src/components/ItemListContainer/itemlistcontainer.css
@@ -1,10 +1,15 @@
 .itemlist{
   padding: 20px;
   text-align: center;
-  background-color: rgb(229, 229, 229);
+  background-color: rgb(58, 57, 57);
   font-size: 20px;
   font-weight: bolder;
   font-family: 'Times New Roman', Times, serif;
+  color: white;
+}
+
+.itemlistcontainer{
+  background-color: rgb(98, 98, 98);
 }
 
 .itemlistcontainer .productos{
@@ -12,11 +17,11 @@
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 10px;
-  margin-top: 30px;
-  margin-left: 10px;
-  margin-right: 10px;
-
+  gap: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 50px;
+  min-height: 85vh;
 }
 
 .itemlistcontainer .productos .producto {
@@ -27,13 +32,30 @@
   padding: 20px;
   border: 3px solid black;
   gap: 10px;
+  background-color: rgb(54, 54, 54);
+  border-radius: 6px;
+  color: rgb(239, 239, 239);
 }
+
+.itemlistcontainer .productos .producto .imagenesProductos{
+  border-radius: 15px;
+}
+
 
 .linkVerMas{
   font-size: 20px;
-  color: blue;
-  text-decoration: underline;
+  color: rgb(165, 23, 23);
   font-weight: 800;
+  background-color: rgb(0, 0, 0);
+  padding: 10px;
+  border-radius: 15px;
+  border: 2px solid rgb(165, 23, 23);
+  transition: 0.3s;
+}
+
+.linkVerMas:hover{
+  color: rgb(251, 10, 10);
+  border: 2px solid rgb(255, 0, 0);
 }
 
 .proNombre{
@@ -47,5 +69,5 @@
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: 700;
   font-size: larger;
-  color: rgb(154, 154, 214);
+  color: rgb(255, 255, 255);
 }
