--- a/src/components/ItemDetailContainer/ItemDetail.css
+++ b/src/components/ItemDetailContainer/ItemDetail.css
@@ -1,47 +1,86 @@
-.ItemDetail{
-   display: flex;
-   flex-direction: row;
-   gap: 100px;
-   margin-top: 80px;
-   margin-left: 30px;
-   
+.ItemDetail {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 100px;
+    min-height: 85vh;
+    background-color: rgb(98, 98, 98);
+    align-items: center;
+    width: 100%;
 }
 
-.imagen{
-    width: 500px;
+.imagen {
+    width: 350px;
+    height: 350px;
+    background-color: white;
 }
-.imagenProduct{
+
+.imagenProduct {
+    border: 3px solid black;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: contain;
+}
+
+
+.info {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+    background-color: rgb(54, 54, 54);
+    padding: 40px;
+    border-radius: 30px;
     border: 3px solid black;
 }
 
-
-.info{
-    width: 50%;
-  display: flex;
-  flex-direction: column;
-  padding: 0 10px;
+.titulo2 {
+    font-weight: bolder;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 35px;
+    margin-bottom: 20px;
+    color: white;
+    text-transform: uppercase;
 }
 
-.titulo2{
-font-weight: bolder;
-font-family: 'Times New Roman', Times, serif;
-font-size: 40px;
-margin-bottom: 20px;
-}
-
-.parrafo{
- font-family: 'Times New Roman', Times, serif;
- font-style: italic;
- font-size: 23px;
- font-weight: 500;
- margin-bottom: 20px;
-}
-
-.precio{
+.parrafo {
     font-family: 'Times New Roman', Times, serif;
     font-style: italic;
     font-size: 23px;
     font-weight: 500;
     margin-bottom: 20px;
-    color: darkblue;
+    color: white;
+}
+
+.precio {
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    font-size: 23px;
+    font-weight: 900;
+    margin-bottom: 20px;
+    color: rgb(255, 18, 18);
+}
+
+.itemCountContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.itemCountContainer .finalizarCompra {
+    margin-top: 10px;
+    font-size: 30px;
+    color: rgb(52, 145, 29);
+    font-weight: 800;
+    background-color: rgb(0, 0, 0);
+    padding: 10px;
+    border-radius: 15px;
+    border: 2px solid rgb(46, 133, 24);
+    transition: 0.3s;
+    text-decoration: none;
+}
+
+.itemCountContainer .finalizarCompra:hover {
+    color: rgb(87, 255, 9);
+    border: 2px solid rgb(123, 255, 0);
 }
